--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.1.0",
+    "@elysiajs/swagger": "^1.1.0",
     "drizzle-orm": "^0.32.1",
     "elysia": "latest"
   },
