--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@elysiajs/cors": "^1.1.0",
     "@elysiajs/swagger": "^1.1.0",
+    "@sinclair/typebox": "^0.32.35",
     "drizzle-orm": "^0.32.1",
     "elysia": "latest"
   },
